--- a/src/makefile
+++ b/src/makefile
@@ -13,10 +13,13 @@ LIB_O= abaselib.o aclslib.o astrlib.o alislib.o atablib.o amathlib.o aveclib.o a
 ALO_O= alo.o
 ALO_T= alo.exe
 
+ALOC_O= aloc.o
+ALOC_T= aloc.exe
+
 ALO_A= libalo.a
 
-ALL_O= $(CORE_O) $(LIB_O) $(ALO_O)
-ALL_T= $(ALO_T)
+ALL_O= $(CORE_O) $(LIB_O) $(ALO_O) $(ALOC_O)
+ALL_T= $(ALO_T) $(ALOC_T)
 ALL_A= $(ALO_A)
 
 all: $(ALL_T) $(ALL_A)
@@ -27,6 +30,9 @@ a: $(ALL_A)
 
 $(ALO_T): $(ALO_O) $(LIB_O) $(CORE_O)
 	$(CC) $(CFLAGS) -o $(@) $(ALO_O) $(LIB_O) $(CORE_O) $(LIBS)
+
+$(ALOC_T): $(ALOC_O) $(LIB_O) $(CORE_O)
+	$(CC) $(CFLAGS) -o $(@) $(ALOC_O) $(LIB_O) $(CORE_O) $(LIBS)
 
 $(ALO_A): $(LIB_O) $(CORE_O)
 	ar -rc $(@) $(LIB_O) $(CORE_O)
