Module library adjustion.
[Fixed]Use unix file separator when environment is not Windows in module
searching.
[Changed]Import supported cyclic import while the cyclic importing
module will skip loading process after loaded once.
[Fixed]The macro alo_rawrem call alo_rawrem function.
[Fixed]Wrong macro defines in makefile while detecting MacOS
environment.

--- a/src/makefile
+++ b/src/makefile
@@ -76,7 +76,7 @@ ifeq ($(PLAT),LINUX)
 	SYSCFLAGS+= -D ALOE_LINUX
 endif
 ifeq ($(PLAT),OSX)
-	SYSCFLAGS+= -D ALOE_MACOS
+	SYSCFLAGS+= -D ALOE_MACOSX
 endif
 ifeq ($(PLAT),FREEBSD)
 	CC:= cc -std=gnu99
