Remove vector library.
[Removed]Remove vector library for it may rare to use in common uses.

--- a/src/makefile
+++ b/src/makefile
@@ -21,7 +21,7 @@ USRLDFLAGS=
 CORE_O= aobj.o astr.o atup.o alis.o atab.o afun.o astate.o amem.o agc.o \
 	abuf.o ameta.o adebug.o avm.o ado.o aeval.o achr.o aop.o acode.o alex.o \
 	aparse.o aload.o asave.o aimpl.o aaux.o ainit.o
-LIB_O= abaselib.o aclslib.o astrlib.o alislib.o atablib.o amathlib.o aveclib.o aiolib.o asyslib.o amodlib.o agclib.o acorolib.o
+LIB_O= abaselib.o aclslib.o astrlib.o alislib.o atablib.o amathlib.o aiolib.o asyslib.o amodlib.o agclib.o acorolib.o
 BASE_O= $(CORE_O) $(LIB_O)
 
 ALO_O= alo.o
