--- a/.gitignore
+++ b/.gitignore
@@ -40,12 +40,15 @@
 *.i*86
 *.x86_64
 *.hex
+alo
+aloc
 
 # Debug files
 *.dSYM/
 *.su
 *.idb
 *.pdb
+/Debug/
 
 # Kernel Module Compile Results
 *.mod*
